Add postgres as queue

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@ TODO
         Handy <b>database tips</b>. <em>According to Google, these are way more interesting than anything else here</em>.
         <ul>
             <li>SQLAlchemy relationship loading techniques with examples <a href="sqlalchemy-relationships.html">for v1</a>, <a href="sqlalchemy-relationships-2.html">for v2</a></li>
-            <li>Everyone should use <a href="postgres-advisory-locks.html">postgres advisory locks</a>!</li>
+            <li>Everyone should use <a href="postgres-advisory-locks.html">Postgres advisory locks</a>!</li>
+            <li>Most of the time, you can use <a href="postgres-as-queue.html">Postgres as a queue</a></li>
             <li>Don't get bitten by missing <a href="foreign-key-indexes.html">foreign key indexes</a></li>
         </ul>
     </p>
@@ -139,7 +140,7 @@ TODO
         <ul>
             <li><a href="https://stepping.site">stepping</a> - incremental view maintenance for application developers</li>
             <li><a href="https://github.com/leontrolski/isjsonschemasubset">isjsonschemasubset</a> - does what it says on the tin</li>
-            <li><a href="https://github.com/leontrolski/sqlski">sqlski</a> - postgres-side nesting of data for Python</li>
+            <li><a href="https://github.com/leontrolski/sqlski">sqlski</a> - Postgres-side nesting of data for Python</li>
             <li><a href="https://github.com/leontrolski/dnjs">dnjs</a> - a Python interpreter for a useful subset of JS</li>
             <li><a href="https://github.com/leontrolski/immerframe">immerframe</a> - a neat way to make deep immutable changes in Python with structural sharing</li>
             <li><a href="https://github.com/leontrolski/towpath">towpath</a> - a js library using proxies to attach paths to values in a nested structure</li>
