--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ TODO
             <li><a href="cmd-click-manifesto.html">The CMD-click manifesto</a></li>
             <li><a href="mostly-pointless.html">Stop doing OO so much</a></li>
             <li>Monolith? Microservices? <a href="manipleservices.html">Manipleservices</a></li>
+            <li>Test categorisation <a href="test-zen.html">Zen</a></li>
         </ul>
     </p>
     <p id="coding-bits-and-bobs">
