--- a/test-zen.html
+++ b/test-zen.html
@@ -25,7 +25,7 @@
             Test Categorisation Zen
         </h1>
         <p>
-            There are no unit tests, intergation tests, functional tests ...
+            There are no unit tests, integration tests, functional tests ...
         </p>
         <p>
             There are only slow tests that are hard to set up and quick tests that aren't
