--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ TODO
     <p>
         ✨ New! ✨
         <ul>
-            <li><a href="https://github.com/leontrolski/pgtestdbpy">pgtestdbpy</a></li>
+            <li><a href="pglockpy.html">Postgres locks explorer</a></li>
             <li><a href="https://github.com/leontrolski/isjsonschemasubset">isjsonschemasubset</a></li>
             <li><a href="https://stepping.site">stepping</a></li>
         </ul>
@@ -54,6 +54,7 @@ TODO
             <li>Everyone should use <a href="postgres-advisory-locks.html">Postgres advisory locks</a>!</li>
             <li>Most of the time, you can use <a href="postgres-as-queue.html">Postgres as a queue</a></li>
             <li>Don't get bitten by missing <a href="foreign-key-indexes.html">foreign key indexes</a></li>
+            <li>Postgres <a href="pglockpy.html">locks explorer</a>!</li>
         </ul>
     </p>
     <br>
@@ -140,6 +141,7 @@ TODO
         Here are some of my <b>projects</b>, none of them are particularly prod-ready, just things that have scratched various itches over the years.
         <ul>
             <li><a href="https://stepping.site">stepping</a> - incremental view maintenance for application developers</li>
+            <li><a href="https://github.com/leontrolski/pgtestdbpy">pgtestdbpy</a> - use Postgres TEMPLATE dbs in tests</li>
             <li><a href="https://github.com/leontrolski/isjsonschemasubset">isjsonschemasubset</a> - does what it says on the tin</li>
             <li><a href="https://github.com/leontrolski/sqlski">sqlski</a> - Postgres-side nesting of data for Python</li>
             <li><a href="https://github.com/leontrolski/dnjs">dnjs</a> - a Python interpreter for a useful subset of JS</li>
