--- a/pglockpy.html
+++ b/pglockpy.html
@@ -5,13 +5,28 @@
             leontrolski - Postgres locks
         </title>
         <style>
-            body {margin: 5% auto; background: #fff7f7; color: #444444; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.8; max-width: 63%;}
+            body {margin: 5% auto; background: #fff7f7; color: #444444; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.8; max-width: 63%; min-height: 100rem;}
             @media screen and (max-width: 800px) {body {font-size: 14px; line-height: 1.4; max-width: 90%;}}
             a {border-bottom: 1px solid #444444; color: #444444; text-decoration: none; text-shadow: 0 1px 0 #ffffff; }
             a:hover {border-bottom: 0;}
             #app {border: solid 2px gray;padding:1rem;}
-            button{margin:0.1rem;}
             .flex-col{display:flex;flex-direction:column;align-items:baseline;}
+
+            button {
+                margin: 0.2rem 0 0.2rem 0;
+                -webkit-appearance: none;
+                border: solid 1px gray;
+                text-align: inherit;
+                background: none;
+                background-color: #ffffff;
+                box-shadow: 0 0 4px 0 #00000030;
+                padding: 2px 8px 2px 8px;
+                cursor: pointer;
+                color: inherit;
+                font: inherit;
+            }
+            @media screen and (max-width: 800px) {button {padding: 2px 5px 2px 5px;}}
+            .light-orange{background-color:rgb(255, 239, 233);}
             .light-blue{background-color:lightblue;}
         </style>
         <script src="33-line-react.js"></script>
@@ -37,11 +52,13 @@
             Notable is <a href="https://github.com/leontrolski/pglockpy/blob/main/test_locks.py#L386-L398">this test</a> - given an arbitrary SQL statement, it determines via runtime inspection which locks are taken.
         </p>
         <p>
-            <code>FOR ...</code> locks lock at the row level, other locks at the table level.
+            <code>FOR ...</code> locks lock at the <b>row</b> level, other locks at the <b>table</b> level.
         </p>
 
+        <h1>Locks Explorer</h1>
         <div id="app"></div>
         <script>
+            const appEl = document.getElementById("app")
             const data = {
                 "statements": {
                     "DROP TABLE": {
@@ -445,15 +462,17 @@
                     state.push({kind: "LOCK", id})
                     history.pushState({id}, "")
                     render()
+                    appEl.scrollIntoView()
                 }},
                 m("code", id))
 
             const StatementButton = id => m(
-                "button",
+                "button.light-orange",
                 {onclick: () => {
                     state.push({kind: "STATEMENT", id})
                     history.pushState({id}, "")
                     render()
+                    appEl.scrollIntoView()
                 }},
                 m("code", data.statements[id].example))
 
@@ -468,35 +487,50 @@
                     m(".flex-col", Object.keys(data.statements).map(statement=>
                         StatementButton(statement))),
                 ),
-                m("h3", m("code", stateRecent().id)),
+                m("hr"),
                 stateRecent().kind === "LOCK"
                     ? m("",
+                        m("p", "Consider the lock:"),
+                        m("h3", m("code", stateRecent().id)),
                         m("",
-                            "Example statements that take the lock:",
+                            "The following statements take a ",
+                            m("code", stateRecent().id),
+                            " lock:",
                             m(".flex-col", data.locks[stateRecent().id].statements.map(statement=>
                                 StatementButton(statement)))),
                         m("br"),
                         m("",
-                            "Blocks the following locks from being taken: ",
+                            "If a ",
+                            m("code", stateRecent().id),
+                            " lock is held, it prevents the following locks from being taken: ",
                             m(".flex-col", data.locks[stateRecent().id].blocks.map(lock=>
                                 LockButton(lock)))),
                         m("br"),
                         m("",
-                            "Doesn't block the following locks from being taken: ",
+                            "If a ",
+                            m("code", stateRecent().id),
+                            " lock is held, it ",
+                            m("b", "doesn't"),
+                            " prevent the following locks from being taken: ",
                             data.locks[stateRecent().id].doesntBlock.length
                                 ? m(".flex-col", data.locks[stateRecent().id].doesntBlock.map(lock=>
                                     LockButton(lock)))
                                 : m("em", "Blocks all other locks from being taken.")))
                     : m("",
-                        "Takes the following locks: ",
+                        m("p", "Consider the statement:"),
+                        m("h3", m("code", data.statements[stateRecent().id].example)),
+                        "It takes the following locks: ",
                         m(".flex-col", data.statements[stateRecent().id].lockTypes.map(lock=>
                             LockButton(lock)))))
-            const render = () => m.render(document.getElementById("app"), {children: [App()]})
+
+            const render = () => m.render(appEl, {children: [App()]})
             render()
 
             window.onpopstate = (event) => {
                 state.pop()
                 render()
+                appEl.scrollIntoView()
+                event.preventDefault()
             }
         </script>
 
