Make example nicer

--- a/pglockpy.html
+++ b/pglockpy.html
@@ -64,7 +64,7 @@
             Notable is <a href="https://github.com/leontrolski/pglockpy/blob/main/test_locks.py#L386-L398">this test</a> - given an arbitrary SQL statement, it determines via runtime inspection which locks are taken.
         </p>
         <p>
-            <code>FOR ...</code> locks lock at the <b>row</b> level, other locks at the <b>table</b> level.
+            <button class="light-blue"><code>SELECT ... FOR ...</code></button> locks lock at the <b>row</b> level, other locks lock at the <b>table</b> level.
         </p>
 
         <h1>Locks Explorer</h1>
